working with variables

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -11,6 +11,15 @@
     <h1>This is great</h1>
     <p>Welcome to templating using EJS</p>
   </div>
+  <script>
+    let admin, name;
+      name = "John";
+       admin = name;
+
+       alert(admin);
+
+    
+  </script>
 </main>
 
 
