--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -16,10 +16,13 @@
  let name = "John";
 
 // embed a variable
-alert( `Hello, ${name}!` ); // Hello, John!
+// alert( `Hello, ${name}!` ); // Hello, John!
+
 
 // embed an expression
-alert( `the result is ${1 + 2}` ); // the result is 3
+alert(` the result is ${1 + 2}`);
+
+alert( "the result is ${1 + 2}" ); // the result is ${1 + 2} (double quotes do nothing)
   </script>
 </main>
 
