--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -13,17 +13,15 @@
     
   </div>
   <script>
- let name = "John";
+ let nameFieldChecked = true; // yes, name field is checked
+let ageFieldChecked = false; // no, age field is not checked
 
-// embed a variable
-// alert( `Hello, ${name}!` ); // Hello, John!
+let isGreater = 4 > 1;
+
+alert( isGreater ); // true (the comparison result is "yes")
 
 
-// embed an expression
-alert(` the result is ${1 + 2}`);
-
-alert( "the result is ${1 + 2}" ); // the result is ${1 + 2} (double quotes do nothing)
-  </script>
+</script>
 </main>
 
 
