--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -13,14 +13,13 @@
     
   </div>
   <script>
- let nameFieldChecked = true; // yes, name field is checked
-let ageFieldChecked = false; // no, age field is not checked
+let name = "Ilya";
 
-let isGreater = 4 > 1;
+alert( `hello ${1}` ); // hello 1
 
-alert( isGreater ); // true (the comparison result is "yes")
+alert( `hello ${"name"}` ); // hello name
 
-
+alert( `hello ${name}` ); // hello Ilya
 </script>
 </main>
 
