--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -13,13 +13,14 @@
     
   </div>
   <script>
-let name = "Ilya";
 
-alert( `hello ${1}` ); // hello 1
+    
+let age = prompt('How old are you?', 100);
 
-alert( `hello ${"name"}` ); // hello name
+alert(`You are ${age} years old!`); // You are 100 years old!
 
-alert( `hello ${name}` ); // hello Ilya
+
+
 </script>
 </main>
 
