--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -14,11 +14,12 @@
   </div>
   <script>
 
-    
-let age = prompt('How old are you?', 100);
 
-alert(`You are ${age} years old!`); // You are 100 years old!
+let value = true;
+alert(typeof value); // boolean
 
+value = String(value); // now value is a string "true"
+alert(typeof value); // string
 
 
 </script>
