division / is applied to non-numbers

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,11 +15,7 @@
   <script>
 
 
-let value = true;
-alert(typeof value); // boolean
-
-value = String(value); // now value is a string "true"
-alert(typeof value); // string
+alert( "6" / "2" ); // 3, strings are converted to numbers
 
 
 </script>
