str(value) to convert number(value)

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,7 +15,12 @@
   <script>
 
 
-alert( "6" / "2" ); // 3, strings are converted to numbers
+let str = "123";
+alert(typeof str); // string
+
+let num = Number(str); // becomes a number 123
+
+alert(typeof num); // number
 
 
 </script>
