--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -14,15 +14,21 @@
   </div>
   <script>
 
+// Remainder %
 
-alert( Boolean(1) ); // true
-alert( Boolean(0) ); // false
+alert( 5 % 2 ); // 1, the remainder of 5 divided by 2
+alert( 8 % 3 ); // 2, the remainder of 8 divided by 3
+alert( 8 % 4 ); // 0, the remainder of 8 divided by 4
 
-alert( Boolean("hello") ); // true
-alert( Boolean("") ); // false
 
-alert( Boolean("0") ); // true
-alert( Boolean(" ") ); // spaces, also true (any non-empty string is true)
+// Exponentiation ** 
+
+alert( 2 ** 2 ); // 2² = 4
+alert( 2 ** 3 ); // 2³ = 8
+alert( 2 ** 4 ); // 2⁴ = 16
+
+alert( 4 ** (1/2) ); // 2 (power of 1/2 is the same as a square root)
+alert( 8 ** (1/3) ); // 2 (power of 1/3 is the same as a cubic root)
 
 
 </script>
