Numeric conversion, unary +

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -14,22 +14,17 @@
   </div>
   <script>
 
-// Remainder %
 
-alert( 5 % 2 ); // 1, the remainder of 5 divided by 2
-alert( 8 % 3 ); // 2, the remainder of 8 divided by 3
-alert( 8 % 4 ); // 0, the remainder of 8 divided by 4
+// No effect on numbers
+let x = 1;
+alert( +x ); // 1
 
+let y = -2;
+alert( +y ); // -2
 
-// Exponentiation ** 
-
-alert( 2 ** 2 ); // 2² = 4
-alert( 2 ** 3 ); // 2³ = 8
-alert( 2 ** 4 ); // 2⁴ = 16
-
-alert( 4 ** (1/2) ); // 2 (power of 1/2 is the same as a square root)
-alert( 8 ** (1/3) ); // 2 (power of 1/3 is the same as a cubic root)
-
+// Converts non-numbers
+alert( +true ); // 1
+alert( +"" );   // 0
 
 </script>
 </main>
