--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,11 +15,18 @@
   <script>
 
 
-let n = 2;
-n += 5; // now n = 7 (same as n = n + 5)
-n *= 2; // now n = 14 (same as n = n * 2)
+// Increment ++ increases a variable by 1:
 
-alert( n ); // 14
+let counter1 = 2;
+counter1++;        // works the same as counter = counter + 1, but is shorter
+alert( counter1 ); // 3
+
+
+// Decrement -- decreases a variable by 1:
+
+let counter = 2;
+counter--;        // works the same as counter = counter - 1, but is shorter
+alert( counter ); // 1
 
 
 
