increment and decrement

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,18 +15,11 @@
   <script>
 
 
-// Increment ++ increases a variable by 1:
+let counter = 0;
 
-let counter1 = 2;
-counter1++;        // works the same as counter = counter + 1, but is shorter
-alert( counter1 ); // 3
-
-
-// Decrement -- decreases a variable by 1:
-
-let counter = 2;
-counter--;        // works the same as counter = counter - 1, but is shorter
-alert( counter ); // 1
+++counter;
+counter++;
+alert( counter );
 
 
 
