--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,12 +15,14 @@
   <script>
 
 
-let counter = 0;
+let a = 1, b = 1;
 
-++counter;
-counter++;
-alert( counter );
+let c = ++a; // 2
+let d = b++; // 1
 
+
+alert(c);
+alert(d);
 
 
 </script>
