--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,14 +15,13 @@
   <script>
 
 
-let a = 1, b = 1;
+let a = 0;
+alert( Boolean(a) ); // false
 
-let c = ++a; // 2
-let d = b++; // 1
+let b = "0";
+alert( Boolean(b) ); // true
 
-
-alert(c);
-alert(d);
+alert(a == b); // true!
 
 
 </script>
