--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -14,14 +14,9 @@
   </div>
   <script>
 
+let year = prompt('In which year was ECMAScript-2015 specification published?', '');
 
-let a = 0;
-alert( Boolean(a) ); // false
-
-let b = "0";
-alert( Boolean(b) ); // true
-
-alert(a == b); // true!
+if (year == 2015) alert( 'You are right!' );
 
 
 </script>
