--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -18,6 +18,8 @@ let year = prompt('In which year was ECMAScript-2015 specification published?', 
 
 if (year == 2015) alert( 'You are right!' );
 
+
+// If we want to execute more than one statement, we have to wrap our code block inside curly braces:
 if (year == 2015) {
   alert( "That's correct!" );
   alert( "You're so smart!" );
