if else condition

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -14,16 +14,17 @@
   </div>
   <script>
 
-let year = prompt('In which year was ECMAScript-2015 specification published?', '');
-
-if (year == 2015) alert( 'You are right!' );
 
 
-// If we want to execute more than one statement, we have to wrap our code block inside curly braces:
+let year = prompt('In which year was the ECMAScript-2015 specification published?', '');
+
 if (year == 2015) {
-  alert( "That's correct!" );
-  alert( "You're so smart!" );
+  alert( 'You guessed it right!' );
+} else {
+  alert( 'How can you be so wrong?' ); // any value except 2015
 }
+
+
 
 
 </script>
