--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -18,10 +18,12 @@
 
 let year = prompt('In which year was the ECMAScript-2015 specification published?', '');
 
-if (year == 2015) {
-  alert( 'You guessed it right!' );
+if(year < 2015) {
+  alert(' To early...' );
+} else if( year > 2015 ) {
+  alert(' Too late' );
 } else {
-  alert( 'How can you be so wrong?' ); // any value except 2015
+  alert(' Exactly!');
 }
 
 
