multiple else..if

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,18 +15,19 @@
   <script>
 
 
+let message;
 
-let accessAllowed;
-let age = prompt('How old are you?', '');
-
-if (age > 18) {
-  accessAllowed = true;
+if(login == 'Employee' ) {
+  message = 'Hello';
+} else if (login == 'Director') {
+  message = 'Greetings';
+} else if(login == '') {
+  message = 'No login';
 } else {
-  accessAllowed = false;
+  message = '';
 }
-
-alert(accessAllowed);
-
+ 
+alert(message);
 
 
 
