Nullish coalescing operator

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,19 +15,10 @@
   <script>
 
 
-let message;
+let user;
 
-if(login == 'Employee' ) {
-  message = 'Hello';
-} else if (login == 'Director') {
-  message = 'Greetings';
-} else if(login == '') {
-  message = 'No login';
-} else {
-  message = '';
-}
- 
-alert(message);
+alert(user ?? "Anonymous"); // Anonymous (user is undefined)
+
 
 
 
