--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,10 +15,11 @@
   <script>
 
 
-let user;
+let firstName = null;
+let lastName = null;
+let nickName = "Supercoder";
 
-alert(user ?? "Anonymous"); // Anonymous (user is undefined)
-
+alert(firstName ?? lastName ?? nickName ?? "Anonymous");
 
 
 
