continue to next iteration

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,11 +15,13 @@
   <script>
 
 
-let firstName = null;
-let lastName = null;
-let nickName = "Supercoder";
+for (let i = 0; i < 10; i++) {
 
-alert(firstName ?? lastName ?? nickName ?? "Anonymous");
+if (i % 4) {
+  alert( i );
+}
+
+}
 
 
 
