labels for break/continue

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,14 +15,15 @@
   <script>
 
 
-for (let i = 0; i < 10; i++) {
+outer: for (let i = 0; i<3; i++) {
+  for (let j=0; j<3; j++) {
+    let input = prompt(`Value at coords (${i}, ${j})`, '');
 
-if (i % 4) {
-  alert( i );
+    if(!input) break outer;
+  }
 }
 
-}
-
+alert('Done!');
 
 
 </script>
