postfix/prefix forms

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,15 +15,8 @@
   <script>
 
 
-outer: for (let i = 0; i<3; i++) {
-  for (let j=0; j<3; j++) {
-    let input = prompt(`Value at coords (${i}, ${j})`, '');
-
-    if(!input) break outer;
-  }
-}
-
-alert('Done!');
+let i = 0;
+while (++i < 5) alert( i );
 
 
 </script>
