--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -8,16 +8,28 @@
 
 <main>
   <div class="jumbotron">
-    <h1>This is great</h1>
-    <p>Welcome to templating using EJS</p>
+    <h1>This is Parth</h1>
+    <p>Welcome to Learning Javascript using EJS with <a href="https://javascript.info/" target="_blank">javascript.info</a></p>
     
   </div>
   <script>
 
 
-let i = 0;
-while (++i < 5) alert( i );
+let a = 2 + 33;
 
+switch (a) {
+  case 3:
+    alert( 'Too small' );
+    break;
+  case 4:
+    alert( 'Exactly!' );
+    break;
+  case 5:
+    alert( 'Too big' );
+    break;
+  default:
+    alert( "I don't know such values" );
+}
 
 </script>
 </main>
