--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,21 +15,26 @@
   <script>
 
 
-let a = 2 + 33;
+let a = 2 + 2;
 
 switch (a) {
-  case 3:
-    alert( 'Too small' );
-    break;
+  case 3: 
+  alert(' to small ');
+  
   case 4:
-    alert( 'Exactly!' );
-    break;
+  alert(' Exactly! ');
+  
   case 5:
-    alert( 'Too big' );
-    break;
-  default:
-    alert( "I don't know such values" );
+    alert(' Too big ');
+ 
+    default:
+      alert(" I don't know such values ");
 }
+
+
+
+
+
 
 </script>
 </main>
