--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -16,30 +16,11 @@
 
 
 
-let arg = prompt("Enter a value?");
-
-switch (arg) {
-  case '0':
-  case '1':
-    alert('One or zero');
-    break;
-
-    case '2':
-      alert( 'Two' );
-      break;
-
-    case '3':
-      alert('Never executes!');
-      break;
-      
-
-      default:
-        alert('An unknown value');
-
+function showMessage() {
+  alert( 'Hello everyone!' );
 }
 
-
-
+showMessage();
 
 
 </script>
