local variables in function

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,12 +15,17 @@
   <script>
 
 
+// local variables
 
 function showMessage() {
-  alert( 'Hello everyone!' );
+  let message = "Hello, I'm JavaScript!"; // local variable
+
+  alert( message );
 }
 
-showMessage();
+showMessage(); // Hello, I'm JavaScript!
+
+alert( message );
 
 
 </script>
