--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -15,17 +15,16 @@
   <script>
 
 
-// local variables
+// outer variables
+
+let userName = 'Parth';
 
 function showMessage() {
-  let message = "Hello, I'm JavaScript!"; // local variable
-
-  alert( message );
+  let message = 'Hello, ' + userName;
+  alert(message);
 }
 
-showMessage(); // Hello, I'm JavaScript!
-
-alert( message );
+showMessage(); // Hello, Parth
 
 
 </script>
