--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -20,11 +20,18 @@
 let userName = 'Parth';
 
 function showMessage() {
+
+  userName = "Raju";
+
   let message = 'Hello, ' + userName;
   alert(message);
 }
 
+alert( userName );
+
 showMessage(); // Hello, Parth
+
+alert( userName );
 
 
 </script>
