The outer variable is only used if there’s no local one.

--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -21,15 +21,15 @@ let userName = 'Parth';
 
 function showMessage() {
 
-  userName = "Raju";
+  let userName = "Raju";
 
   let message = 'Hello, ' + userName;
   alert(message);
 }
 
-alert( userName );
 
-showMessage(); // Hello, Parth
+
+showMessage(); // Parth
 
 alert( userName );
 
